--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "formik": "^2.4.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-normalize": "^8.1.1"
+    "styled-normalize": "^8.1.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
