--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "formik": "^2.4.5",
     "next": "14.1.4",
