--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.0",
     "styled-normalize": "^8.1.1",
     "yup": "^1.4.0"
   },
