--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-overlay-ts": "^2.0.2",
     "react-redux": "^9.1.0",
+    "react-spinners": "^0.13.8",
     "styled-normalize": "^8.1.1",
     "yup": "^1.4.0"
   },
