--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "react-datepicker": "^6.9.0",
+    "server-only": "^0.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^5"
   }
