--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
     "react-loading-overlay-ts": "^2.0.2",
     "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
