--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.3.2",
     "@mui/x-date-pickers": "^7.3.1",
     "@reduxjs/toolkit": "^2.2.3",
     "air-datepicker": "^3.5.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "formik": "^2.4.5",
